calcif2
~~~~~~~
Version 2.7.0
* Post DiFX-2.6

Version 2.6.0
* Version for DiFX-2.6, Mar 4, 2019

Version 2.5.3
* looks for tirpc via pkgconfig to provide rpc/rpc.h

Version 2.5.0
* Post DiFX 2.4
* move difxsniff to SniffTools
* remove example that is no longer valid
* move some useful and quasi-useful scripts into more appropriate source trees
* respect new DELAY MODEL parameter of the .calc file: use to run non-standard delay model program
* remove non-functional Sekido model code
* Version for DiFX-2.5, May 16, 2017

Version 2.3.0
* vlog: split ANTAB file into antenna-specific files
* Version for DiFX-2.3, Dec 20, 2013
* Left unchanged for DiFX-2.4, Nov 4, 2014

Version 2.2.0
* Fix azimuth polynomial interpolation in case of wrap (John Morgan)
* Option to evaluate quality of delay interpolation (use -O 2 (or higher) and -v)
* Add polynomial fitting option (-F) .  This will take more CALC samplings than needed and fit
  a constrained polynomial (endpoints fixed) to that data.  This seems to produce marginally
  better values.  This new mode requires GSL.
* loose integration with an informal version of CALC with Sekido model
* Version for DiFX-2.2, June 1, 2013

Version 2.1.0
* Name change from DiFX-2.0.2
* Version for DiFX-2.1, May 4, 2012

Version 2.0.2
* Post DiFX-2.0.1
* Feature to augment output model with additional tabulated delays
* Infrastructure to populate az, el and parallactic angle added; only az works so far

Version 2.0.1
* Post version 2.0
* Some cleanup, valgrind compliance, improved error messages, improved use of difxio constants
* Version for DiFX-2.0.1, June 10, 2011

Version 2.0
* Writes im files only (no delay/uvw/rate) and allows multi-phase centre
* Warn when NaN or Inf delays are made
* difxsniff: Retain extra digit in amplitude column
* Requires difxio 3.0
* Version for DiFX-2.0.0

Version 1.1
* Fix bug: didn't respect polynomial order/increment from command line
* Version for DiFX-1.5.1

Version 1.0